--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,16 +23,16 @@
                 <%= link_to "Products", user_items_path(current_user), class: 'btn btn-default col-md-2' %>
             <% end %>
             
-            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Purchases", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
-            <%= link_to "Products", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
         </div>
     </div>
 </div>
