--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,59 +6,24 @@
     </div>
     <div class='row'>
         <div class='col-md-10 col-md-offset-1'>
-            <table class='table table-bordered'>
-                <tr class='table_label text-center'>
-                    <th class='text-center'>
-                        <h5>No</h5>
-                    </th>
-                    <td>
-                        <h5>Img</h5>
-                    </td>
-                    <td>
-                        <h5>Username</h5>
-                    </td>
-                    <td>
-                        <h5>Email</h5>
-                    </td>
-                    <td>
-                        <h5>Other Info</h5>
-                    </td>
-                    <td>
-                        <h5>Control Buttons</h5>
-                    </td>
-                </tr>
-                <% @users.each_with_index do |user, index| %>
-                    <tr class='table_user_info'>
-                        <th class='text-center'>
-                            <%= index + 1 %>
-                        </th>
-                        <td class='table_img'>
-                            <%= gravatar_image_tag(user.email) %>
-                        </td>
-                        <td>
-                            <%= user.username %>
-                        </td>
-                        <td>
-                            <%= user.email%>
-                        </td>
-                        <td class='table_info text-center'>
-                            <% unless user.standard? %>
-                                <%= link_to "Products: #{ user.items.count }", target_product_list_path(user.id), class: 'btn btn-default' %>
-                            <% end %>
-                            <%= link_to "Wishes: #{ user.wish_lists.count }", target_wish_list_path(user.id), class: 'btn btn-default' %>
-                            <%= link_to 'Ordered: #', '#', class: 'btn btn-default' %>
-                            <%= link_to "Review: #{ user.reviews.count }", target_review_list_path(user.id), class: 'btn btn-default' %>
-                            
-                        </td>
-                        <td class='btn_area text-center'>
-                            <!-- for lock/unlock user -->
-                            <%= link_to 'SaveSpace', '#', class: 'btn btn-info' %>
-                            
-                            <%= link_to 'Delete', user_registration_path(user), method: :delete, class: 'btn btn-danger' %>
-                        </td>
-                    </tr>
-                <% end %>
-            </table>
+            <div class='row'>
+                <div class='col-md-10 col-md-offset-1'>
+                    <h3 class='text-center'>Admin</h3>
+                </div>
+                <%= render "users/user_list", users: @admin %>
+            </div>
+            <div class='row'>
+                <div class='col-md-10 col-md-offset-1'>
+                    <h3 class='text-center'>Seller</h3>
+                </div>
+                <%= render "users/user_list", users: @seller %>
+            </div>
+            <div class='row'>
+                <div class='col-md-10 col-md-offset-1'>
+                    <h3 class='text-center'>Standard User</h3>
+                </div>
+                <%= render "users/user_list", users: @standard_user %>
+            </div>
         </div>
     </div>
 </div>
