change user_show view

--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -40,7 +40,7 @@
                     <%= link_to "Products: #{ user.items.count }", target_product_list_path(user.id), class: 'btn btn-default' %>
                 <% end %>
                 <%= link_to "Wishes: #{ user.wish_lists.count }", target_wish_list_path(user.id), class: 'btn btn-default' %>
-                <%= link_to 'Ordered: #', '#', class: 'btn btn-default' %>
+                <%= link_to "Ordered: #{ user.orders.count }", '#', class: 'btn btn-default' %>
                 <%= link_to "Review: #{ user.reviews.count }", target_review_list_path(user.id), class: 'btn btn-default' %>
             </td>
             <td class='btn_area text-center'>
