--- a/app/views/items/_items_list.html.erb
+++ b/app/views/items/_items_list.html.erb
@@ -25,10 +25,12 @@
                                 <p>Status: <%= change_item_status_word(item.status) %>, </p>
                                 <p>Price: $<%= item.price %>, </p>
                                 <p>Quantity: <%= item.quantity %>, </p>
+                                <p>Sold: <%= item_total_sell(item) %>, </p></br>
                                 <p>Wish: <%= item.wish_lists.count %>, </p>
                                 <p><%= link_to "Review: #{item.reviews.count}", item_reviews_path(item) %>, </p>
-                                <p>Average Rating: <%= average_rating(item) %></p>
+                                <p>Average Rating: <%= average_rating(item) %>, </p>
                                 <p>Img Number: <%= item.photos.count %></p>
+                                
                             </td>
                             <td class='btn_area text-center'>
                                 <%= link_to 'Info', item_path(item), class: 'btn btn-default'%>
