--- a/app/views/control_target/target_wish_list.html.erb
+++ b/app/views/control_target/target_wish_list.html.erb
@@ -4,5 +4,5 @@
             <h1><%= @user.username %>'s Wish List</h1>
         </div>
     </div>
-    <%= render 'wish_lists/list' %>
+    <%= render 'wish_lists/wishes_list' %>
 </div>
