--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -20,7 +20,7 @@
                      <h3 class='in_stock'>In Stock.</h3>
                 <% end %>
                 <div class='sold_review_area'>
-                    <p>Sold: #, Reviews: #, Rating : #, Wishing: #</p>
+                    <p>Sold: <%= item_total_sell(@item) %>, Reviews: <%= @item.reviews.count %>, Rating : <%= average_rating(@item) %>, Wishing: <%= @item.wish_lists.count %></p>
                 </div>
                 <div class='btn_area'>
                     <%= link_to 'Buy Now', '#', class: 'btn btn-info'%>
