--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
                 <%= link_to "Products", user_items_path(current_user), class: 'btn btn-default col-md-2' %>
             <% end %>
             
-            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Order History", user_orders_path(current_user), class: 'btn btn-default col-md-2' %>
             <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
             <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
             <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
