--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -248,6 +248,20 @@ body {
         color: rgb(0,225,0);
         font-weight: bold;
     }
+        
+    .order_items_form {
+        #order_item_quantity {
+            width: 120px;
+            
+        }
+        
+        .btn.btn-info {
+            height: 25px;
+            width: 120px;
+            padding: 2px 8px;
+            margin-bottom: 5px;
+        }
+    }
     
     .btn_area {
         a {
