--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -22,9 +22,9 @@
                 <div class='sold_review_area'>
                     <p>Sold: <%= item_total_sell(@item) %>, Reviews: <%= @item.reviews.count %>, Rating : <%= average_rating(@item) %>, Wishing: <%= @item.wish_lists.count %></p>
                 </div>
+                
                 <div class='btn_area'>
-                    <%= link_to 'Buy Now', '#', class: 'btn btn-info'%>
-                    <%= link_to 'Add to Cart', '#', class: 'btn btn-info'%>
+                    <%= render 'order_items/form', order_item: @item.order_items.new, item: @item %>
                     <%= link_to 'Add to Wish List', [@item, WishList.new], method: :post, class: 'btn btn-info'%>
                 </div>
             </div>
