--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -28,38 +28,5 @@
             <%= link_to 'Add item to this categories', new_item_path, class: 'btn btn-success' %>
         </div>
     </div>
-    <div class='row'>
-        <div class='col-md-10 col-md-offset-1 items_list'>
-            <% unless @category.items.empty? %>
-                <table class='table table-bordered'>
-                    <% @category.items.each_with_index do |item, index| %>
-                        <tr>
-                            <th class='text-center table_index'>
-                                <%= index + 1 %>.
-                            </th>
-                            <td class='table_img'>
-                                <% unless item.photos.empty? %>
-                                    <%= image_tag(item.photos.first.image.thumb.url) %>
-                                <% else %>
-                                    <%= image_tag('no_img.jpg',size: '49x50') %>
-                                <% end %>
-                            </td>
-                            <td class='table_title'>
-                                <%= item.title %>
-                            </td>
-                            <td class='btn_area'>
-                                <%= link_to 'Info', item_path(item), class: 'btn btn-default' %>
-                                <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-info' %>
-                                <%= link_to 'Delete', item_path(item), method: :delete, class: 'btn btn-danger' %>
-                            </td>
-                        </tr>
-                    <% end %>
-                </table>
-            <% else %>
-                <div  class='text-center'>
-                    <h4>This category has no item.</h4>
-                </div>
-            <% end %>
-        </div>
-    </div>
+    <%= render 'categories_items_list', items: @category.items %>
 </div>
