Add payment system

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
             <% end %>
             
             <%= link_to "Order History", user_orders_path(current_user), class: 'btn btn-default col-md-2' %>
-            <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
+            <%= link_to "Pay for Orders", new_user_charge_path(current_user), class: 'btn btn-default col-md-2' %>
             <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
             <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
             <%= link_to "Save space", '#', class: 'btn btn-default col-md-2' %>
