--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,10 @@
 <div class='container'>
     <div class='row'>
         <div class='col-md-12 text-center'>
-            <h1>Welcome to Kim's Online Store</h1>
+            <% if user_signed_in? %>
+            <h1><%= current_user.last_time_login %></h1>
+            <% end %>
+            <h1>Test</h1>
         </div>
     </div>
 </div>
