--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,7 @@
 <div class='container'>
     <div class='row'>
         <div class='col-md-12 text-center'>
-            <% if user_signed_in? %>
-            <h1><%= current_user.last_time_login %></h1>
-            <% end %>
-            <h1>Test</h1>
+            <h1>Welcom to Kim's Store</h1>
         </div>
     </div>
 </div>
