Add message model and controller

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class='row'>
     <div class='col-md-12'>
         <ul class="nav navbar-nav">
-            <li><%= link_to 'Contect', contect_path, class: 'contect' %></li>
+            <li><%= link_to 'Contect', new_message_path, class: 'contect' %></li>
         </ul>
     </div>
 </div>
