redo view, delete all spec so I can redo it

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,521 +7,35 @@
  *= require rails_bootstrap_forms
 */
 
-html, 
-body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    
-    .container-fluid {
-        min-height: 100%;
-        position: relative;
-    }
-}
 
 .header {
-    .navbar{
-        background-color: rgb(148,148,148);
-    }
-
-    .logo {
-        float: left;
-
-        img {
-            width: 40%;
-            height: 40%;
-        }
-    }
-    
-    form {
-        width: 330px;
-        display: inline;
-        position: absolute;
-        bottom: 0px;
-        right: 320px;
-    }
-    
-    #query {
-        width: 250px;
-    }
-
-    .nav.navbar-nav {
+    .nav_area {
         float: right;
-        .nav_gravatar {
-            text-align: center;
-            
-            &:hover {
-                background-color: white;
-            }
-
-            img {
-                height: 75%;
-                width: 75%
-            }
-        }
-
-        .home,
-        .help,
-        .logout,
-        .signin,
-        .signup {
-            padding: 35px 15px;
-            color: white;
-
-            &:hover {
-                background-color: white;
-                color: black;
-            }
-        }
     }
-}
-
-.message {
-    .row{
-        margin-top: -20px;
-        margin-bottom: 20px;
-    }
-}
-
-.mean_area {
-    margin-bottom: 60px;
-}
-
-.debug_area {
-    margin-bottom: 50px;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
     
+    .dropdown-menu {
+        margin-top: -5px;
+    }
+    
+    .form-group {
+        margin-bottom: 0px;
+    }
+}
+
+.navbar_area {
     .row {
-        background-color: rgb(148,148,148);
-    }
+        background-color: rgb(200,30,30);
     
-    .nav.navbar-nav {
-        float: right;
-    }
     
-    .contect {
-        color: white;
-        
-        &:hover {
-            background-color: white;
-            color: black;
-        }
-    }
-}
-
-.user_show_page {
-    .user_info_area {
-        margin-bottom: 20px;
-    }
-    
-    .user_show_controllpanel {
-        background-color: rgb(148,148,148);
-        padding: 5px;
-        
-        .btn {
-            border: 5px solid rgb(148,148,148);
-        }
-    }
-}
-
-.categories_index {
-    .create_button {
-        margin-bottom: 10px;
-    }
-    
-    .table_title {
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }
-    
-    .table_index {
-        width: 50px;
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }
-    
-    .table_number {
-        width: 180px;
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }
-    
-    .btn_area {
-        width: 250px;
-        padding: 8px 15px;
-        .btn {
-            width: 70px;
-        }
-    }
-}
-
-.category_show {
-    .category_info {
-        th {
-            width: 60px;
-        }
-    }
-    
-    .create_button {
-        margin-bottom: 10px;
-    }
-    
-    .items_list {
-        .table_index {
-            width: 50px;
-            padding-top: 23px;
-            padding-bottom: 23px;
-        }
-        
-        .table_img {
-            width: 60px;
-        }
-        
-        .btn_area {
-            width: 250px;
-            padding: 16px 15px;
+        li a {
+            color: white;
             
-            .btn {
-                width: 70px;
-            }
-        }
-        
-        .table_title {
-            padding-top: 23px;
-            padding-bottom: 3px;
-        }
-    }
-}
-
-.category_form{
-    #category_body {
-        height: 200px;
-    }
-}
-
-.item_form {
-    #item_body {
-        height: 200px;
-    }
-}
-
-.item_list {
-   .table_index {
-        width: 50px;
-        padding-top: 50px;
-        padding-bottom: 50px;
-    }
-    
-    .table_img {
-        width: 110px;
-    }
-    
-    .btn_area {
-        width: 250px;
-        padding: 45px 15px;
-
-        .btn {
-            width: 70px;
-        }
-    }
-    
-    .table_title {
-        h5 {
-            margin: 15px 0;
-        }
-        
-        p {
-            width: 100px;
-            margin-right: 15px;
-            display: inline;
-        }
-    }
-}
-
-.item_show {
-    .product_img {
-        width: 100%;
-        height: 100%;
-    }
-    
-    .out_of_stocK,
-    .quantity_not_alot {
-        color: rgb(240,0,3);
-        font-weight: bold;
-    }
-    
-    .in_stock {
-        color: rgb(0,225,0);
-        font-weight: bold;
-    }
-        
-    .order_items_form {
-        #order_item_quantity {
-            width: 120px;
-            
-        }
-        
-        .btn.btn-info {
-            height: 25px;
-            width: 120px;
-            padding: 2px 8px;
-            margin-bottom: 5px;
-        }
-    }
-    
-    .btn_area {
-        a {
-            height: 25px;
-            padding: 2px 8px;
-        }
-    }
-}
-
-.review_index {
-    .no_review {
-        border: 2px solid red;
-    }
-    
-    .create_button {
-        margin-bottom: 10px;
-    }
-    
-    .review_area {
-        
-        
-        .table_index {
-            width: 50px;
-            padding-top: 18px;
-        }
-        
-        img {
-            height: 40px;
-            width: 40px;
-        }
-        
-        .table_img {
-            width: 50px;
-        }
-        
-        .table_rating {
-            width: 50px;
-            padding-top: 18px;
-        }
-    }
-}
-
-.user_index {
-    .table_label {
-        height: 52px;
-        
-        th {
-            width: 50px;
-            max-width: 50px;
-        }
-        
-        .table_img {
-            width: 60px;
-            max-width: 60px;
-        }
-        
-        .table_username {
-            width: 200px;
-            max-width: 200px;
-        }
-        
-        .table_email {
-            width: 200px;
-            max-width: 200px;
-        }
-        
-        .table_info {
-            width: 450px;
-            max-width: 450px;
-        }
-        
-        .table_btn_area {
-            width: 200px;
-            max-width: 200px;
-        }
-    }
-    
-    .table_user_info {
-        
-        th{
-            padding-top: 18px;
-            width: 50px;
-            max-width: 50px;
-        }
-        
-        
-        
-        img {
-            height: 40px;
-            width: 40px;
-            
-        }
-        
-        .table_img {
-            width: 60px;
-            max-width: 60px;
-        }
-        
-        .table_username {
-            width: 200px;
-            max-width: 200px;
-            
-            h5 {
-                text-overflow: ellipsis;
-                width: 150px;
-                max-width: 150px;
-                overflow: hidden; 
-                margin-right: 0;
-            }
-        }
-        
-        .table_email {
-            width: 200px;
-            max-width: 200px;
-            
-            h5 {
-                text-overflow: ellipsis;
-                width: 150px;
-                max-width: 150px;
-                overflow: hidden; 
-                margin-right: 0;
-            }
-        }
-        
-        .table_info {
-            width: 450px;
-            max-width: 450px;
-            
-            a {
-                width: 95px;
-                padding: 4px 6px;
-            }
-        }
-        
-        .btn_area {
-            width: 200px;
-            max-width: 200px;
-            
-            a {
-                width: 60px;
-                padding: 4px 6px;
+            &:hover {
+                background-color: rgb(240,30,30);
             }
         }
     }
 }
 
-.wish_list_index {
-    .table_label {
-        height: 52px;
-    }
-    
-    .wish_area {
-        .table_index {
-            width: 50px;
-            padding-top: 18px;
-        }
-        
-        img {
-            height: 40px;
-            width: 40px;
-            
-        }
-        
-        .table_img {
-            width: 60px;
-        }
-        
-        .table_title {
-            
-        }
-        
-        .table_wish_info {
-            width: 300px;
-            
-            strong {
-                margin-right: 15px;
-            }
-        }
-        
-        .table_more_info {
-            width: 220px;
-        }
-        
-        .table_button {
-            width: 220px;
-            
-            a{
-                width: 94px;
-            }
-        }
-    }
-}
 
-.target_review_list {
-    .label_area {
-        height: 37px;
-    }
-    
-    .review_area{
-        .table_index {
-            width: 50px;
-            padding-top: 20px;
-        }
-        
-        .img {
-            height: 40px;
-            width: 40px;
-            
-        }
-        
-        .table_img {
-            width: 60px;
-        }
-        
-        .table_rating {
-            width: 70px;
-            padding-top: 20px;
-        }
-    }
-}
 
-.search_index {
-    .table_index {
-        height: 120px;
-        width: 50px;
-        padding-top: 50px;
-    }
-    
-    img {
-        height: 100px;
-        width: 100px;
-    }
-    
-    .table_img {
-        width: 120px;
-    }
-    
-    .table_title {
-        width: 630px;
-        
-        p {
-            display: inline;
-            margin-right: 15px;
-        }
-    }
-    
-    .btn_area {
-        width: 93px;
-        padding-top: 40px;
-    }
-}
