--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,9 @@
         
     </head>
     <body>
-        <div class='container-fluid'>
-            <div class='header'>
-                <%= render 'layouts/header' %>
-            </div>
+        <%= render 'layouts/header' %>
+        <%= render 'layouts/navbar' %>
+            
             <div class='message'>
                 <%= render 'layouts/message' %>
             </div>
@@ -25,6 +24,6 @@
             <div class='footer'>
                 <%= render 'layouts/footer' %>
             </div>
-        </div>
+        
     </body>
 </html>
