--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,6 @@
-<div class='container'>
-    <div class='row'>
-        <div class='col-md-12 text-center'>
-            <h1>Welcom to Kim's Store</h1>
-        </div>
-    </div>
+<div class='col-md-2'>
+    <%= render 'layouts/side_bar' %>
+</div>
+<div class='col-md-10'>
+    <h1>Welcom to Kim's Store</h1>
 </div>
