--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
             <div class='message'>
                 <%= render 'layouts/message' %>
             </div>
-            <div class='mean_area'>
-                <%= yield %>
+            <div class='container-fluid'>
+                <div class='row'>
+                    <%= yield %>
+                </div>
             </div>
             <div class='debug_area'>
                 <%= debug(params) if Rails.env.development? %>
